add author footer to article, add title to menu-toggle, add sorting for social and icons, add icons to pages and categories

--- a/templates/article.html
+++ b/templates/article.html
@@ -70,7 +70,9 @@
         <div class="entry-content">
             {{ article.content }}
         </div>
-        <!-- /.entry-content -->
+        <footer class="text-right">
+            - {{article.author}}
+        </footer>
     </article>
 </section>
 {% endblock %}
