--- a/templates/category.html
+++ b/templates/category.html
@@ -9,6 +9,6 @@
 
 {% block precontent %}
     <header class="page-header">
-        <h1>Latest Articles in {{ category }}</h1>
+        <h1>Latest Articles in {{ category | capitalize }}</h1>
     </header>
 {% endblock %}
