--- a/templates/archives.html
+++ b/templates/archives.html
@@ -1,7 +1,7 @@
 {% extends "include/article_list.html" %}
-{% block title %}Latest: - {{ SITENAME }}{% endblock %}
+{% block title %}Recent Articles - {{ SITENAME }}{% endblock %}
 {% block precontent %}
     <header class="page-header">
-        <h1>Latest Articles</h1>
+        <h1>Recent Articles</h1>
     </header>
 {% endblock %}
