--- a/templates/include/article_list.html
+++ b/templates/include/article_list.html
@@ -13,7 +13,10 @@
                     {{ article.summary }}
                 </div>
             </article>
+            {% if not loop.last %}
             <hr/>
+            {% endif %}
         {% endfor %}
     {% endif %}
+    {% include 'include/pagination.html' %}
 {% endblock %}
