add users icon to social section

--- a/templates/base.html
+++ b/templates/base.html
@@ -144,7 +144,7 @@
                 <li class="nav-divider"></li>
                 <li>
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapse-social">
-                        <i class="fa fa-folder-open padding-small"></i>
+                        <i class="fa fa-users padding-small"></i>
                         Social
                     </a>
                 </li>
