update readme, include disqus support, text-align footer

--- a/templates/article.html
+++ b/templates/article.html
@@ -70,6 +70,7 @@
         <div class="entry-content">
             {{ article.content }}
         </div>
+        {% include 'include/comments.html' %}
         <footer class="text-right">
             - {{article.author}}
         </footer>
