--- a/templates/base.html
+++ b/templates/base.html
@@ -203,5 +203,6 @@
         $("#wrapper").toggleClass("toggled");
     });
     </script>
+    {% include 'include/disqus_script.html' %}
 </body>
 </html>
