--- a/templates/include/footer.html
+++ b/templates/include/footer.html
@@ -2,10 +2,10 @@
     <div class="container-fluid">
         <hr>
         <div class="row">
-            <div class="col-xs-4">
+            <div class="col-xs-4 text-left">
                 {{SITESUBTITLE}}
             </div>
-            <div class="col-xs-8">
+            <div class="col-xs-8 text-right">
                 Built using <a href="http://docs.getpelican.com/en/latest">Pelican</a>, <a href="getbootstrap.com">Bootstrap3</a> and the <a href="https://github.com/ingwinlu/pelican-twitchy">pelican-twitchy</a> theme.
             </div>
         </div>
