--- a/templates/tag.html
+++ b/templates/tag.html
@@ -8,6 +8,6 @@
 
 {% block precontent %}
     <header class="page-header">
-        <h1>Latest Articles featuring {{ tag | capitalize }}</h1>
+        <h1>Latest Articles featuring {{ tag }}</h1>
     </header>
 {% endblock %}
