--- a/templates/page.html
+++ b/templates/page.html
@@ -37,7 +37,7 @@
 
 {% block content %}
     <section id="content" class="body">
-        <h1 class="entry-title">{{ page.title }}</h1>
+        <h1 class="page-header">{{ page.title }}</h1>
         {% if PDF_PROCESSOR %}
             <a href="{{ SITEURL }}/pdf/{{ page.slug }}.pdf">
                 get the pdf
