--- a/templates/article.html
+++ b/templates/article.html
@@ -70,10 +70,10 @@
         <div class="entry-content">
             {{ article.content }}
         </div>
-        {% include 'include/comments.html' %}
         <footer class="text-right">
-            - {{article.author}}
+            <p>- {{article.author}}</p>
         </footer>
+        {% include 'include/comments.html' %}
     </article>
 </section>
 {% endblock %}
