add sitelogo, add option to display recent articles on landing

--- a/templates/article.html
+++ b/templates/article.html
@@ -50,7 +50,7 @@
 <link rel="canonical" href="{{ SITEURL }}/{{ article.url }}">
 {% endblock %}
 
-{% block collapse_share %}in{% endblock %}
+{% block collapse_latest %}in{% endblock %}
 
 {% block content %}
 <section id="content">
